--- a/Website.html
+++ b/Website.html
@@ -114,6 +114,13 @@ footer {
          <li><a href="Products.html">Products</a></li>
                 <li><a href="AboutUs.html">About Us</a></li>
                 <li><a href="Contact.html">Contact</a></li>
+
+ <div id="your-division-id">
+            <h2></h2>
+            <p></p>
+       </div>
+
+
         
     </main>
     
