--- a/Website.html
+++ b/Website.html
@@ -120,7 +120,7 @@ footer {
             <p></p>
        </div>
 
-
+<img src="flg.jpeg" alt="SVG Tobaccof" width="500" height="333">
         
     </main>
     
