--- a/Website.html
+++ b/Website.html
@@ -125,7 +125,7 @@ footer {
             <p></p>
        </div>
 
-         <img src="https://media.istockphoto.com/id/1552845101/photo/saint-vincent-and-the-grenadines-flag-on-the-flagpole.jpg?s=612x612&w=0&k=20&c=zFFiAFovPEhim5CzVwYNCkbQS8awcvsiUaFFvqfRjvA=" alt="" width="500" height="333">  
+         <img src="https://media.istockphoto.com/id/1552845101/photo/saint-vincent-and-the-grenadines-flag-on-the-flagpole.jpg?s=612x612&w=0&k=20&c=zFFiAFovPEhim5CzVwYNCkbQS8awcvsiUaFFvqfRjvA=" alt="" width="500" height="333"> <img src="<img src="https://media.istockphoto.com/id/1552845101/photo/saint-vincent-and-the-grenadines-flag-on-the-flagpole.jpg?s=612x612&w=0&k=20&c=zFFiAFovPEhim5CzVwYNCkbQS8awcvsiUaFFvqfRjvA=" alt="" width="500" height="333">" alt="" width="500" height="333">  
     <footer>
         &copy; 2023 Pure Puff Plantation. All rights reserved.
     </footer>  
