--- a/Products.html
+++ b/Products.html
@@ -116,7 +116,7 @@ footer {
                 <li><a href="AboutUs.html">About Us</a></li>
                 <li><a href="Contact.html">Contact</a></li>
        
-        <img src="cigbox.jpg" alt="cigar" width="500" height="333">
+        <img src="https://m.media-amazon.com/images/I/61zvs48Az-L._AC_UF894,1000_QL80_.jpg" alt="cigar" width="500" height="333">
         
         <div id="your-division-id">
             <h2>Cigar</h2>
