--- a/Products.html
+++ b/Products.html
@@ -123,7 +123,7 @@ footer {
             <p>Price:1 pack of 12 for $100</p>
        </div>
  
-        <img src="cig.png" alt="cigarettes" width="500" height="333">
+        <img src="https://m.media-amazon.com/images/I/51rXxUHrdUL._AC_UF1000,1000_QL80_.jpg" alt="cigarettes" width="500" height="333">
         
          <div id="your-division-id">
             <h2>Cigarettes</h2>
