--- a/Products.html
+++ b/Products.html
@@ -130,7 +130,7 @@ footer {
             <p>Price:1 pack for $20</p>
        </div>
         
-        <img src="Ctobacco.webp" alt="chewing tobacco" width="500" height="333">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQW-_fHhQR215_lpRcXrjQxfreriMKWpj9jEkCUcOuy_lPU-vSIddaZn8fs8uaTYWAttns&usqp=CAU" alt="chewing tobacco" width="500" height="333">
         
         <div id="your-division-id">
             <h2>Chewing Tobacco</h2>
