--- a/Website.html
+++ b/Website.html
@@ -98,7 +98,9 @@ footer {
         <div id="your-division-id">
             <h2>Information</h2>
             
-            <p>We are a company that harvests and sells tobacco we are located in St.vincent Bay street opposite the KFC building</p>
+            <p>We are a company that harvests and sells tobacco we are located in St.vincent Bay street
+                opposite the KFC building and our goal is to make sure you the customer is well taken care of
+            in all your tobacco needs</p>
        </div>
         
          <div id="your-division-id">
